Added home page mockup, /user/{UserID}/accounts to the API to populate the home screen datagrid.
